cabal-version:       3.4
name:                pa5
version:             0.1.0.1
license:             MIT
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md

executable pa5
  build-depends:       
      base          >= 4.17  && <4.18
    , containers    >= 0.7  && <0.8
    , exceptions    >= 0.10 && <0.11
    , haskeline     >= 0.8  && <0.9
    , mtl           == 2.3.1
    , parsec        >= 3.1   && <3.2
    , pretty        >= 1.1
    , process       >= 1.2  && <2.0
    , text          >= 2.1.2 && <3.0
    , transformers  >= 0.6.1.2 && <0.7

  other-modules:
    Eval
    Infer
    Lexer
    Parser
    Pretty
    Syntax
    Type
    Repline

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs